Image Source file changed

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <body>
     <section class="container">
       <section class="upperSection">
-        <img src="02left.png" class="arrow left" alt="" />
+        <img src="Images/02left.png" class="arrow left" alt="" />
 
         <section class="frame">
           <section class="slider">
-            <img src="perfect width height/colors.jpg" class="images" alt="" />
-            <img src="perfect width height/daisy.jpg" class="images" alt="" />
-            <img src="perfect width height/flowers.jpg" class="images" alt="" />
-            <img src="perfect width height/forest.jpg" class="images" alt="" />
+            <img src="Images/colors.jpg" class="images" alt="" />
+            <img src="Images/daisy.jpg" class="images" alt="" />
+            <img src="Images/flowers.jpg" class="images" alt="" />
+            <img src="Images/forest.jpg" class="images" alt="" />
           </section>
           <!--slider end-->
         </section>
         <!--frame end-->
-        <img src="01right.png" class="arrow right" alt="" />
+        <img src="Images/01right.png" class="arrow right" alt="" />
       </section>
       <!--upper section end-->
       <section class="bottomSection">
